--- a/main.css
+++ b/main.css
@@ -247,7 +247,7 @@ p {
 
 }
 
-#date1, #date2, #date3, #date4 {
+#date1, #date2, #date3, #date4, #date5 {
 	color: rgb(255, 64, 86);
 	font-weight: bolder;
 }
