--- a/main.css
+++ b/main.css
@@ -258,12 +258,15 @@ a {
 
 }
 
-#date1, #date2, #date3, #date4, #date5 {
+/*#date1, #date2, #date3, #date4, #date5 {
 	color: rgb(255, 64, 86);
 	font-weight: bolder;
-}
+}*/
 
 .timeline-event-thumbnail {
+
+	color: rgb(255, 64, 86);
+	font-weight: bolder;
 	
 	-moz-transition: box-shadow 0.5s ease-in 0.1s;
 	-o-transition: box-shadow 0.5s ease-in 0.1s;
