--- a/main.css
+++ b/main.css
@@ -258,10 +258,10 @@ a {
 
 }
 
-/*#date1, #date2, #date3, #date4, #date5 {
+#date0, #date10, #date1, #date2, #date3, #date4, #date5 {
 	color: rgb(255, 64, 86);
 	font-weight: bolder;
-}*/
+}
 
 .timeline-event-thumbnail {
 
